# Lightweight

./: .clang-format  .clang-tidy  .gitignore  .vimspector.json  AGENT.md  CMakeLists.txt  CMakePresets.json  README.md  annotated.html  annotated_dup.js  classes.html  concepts.html  concepts.js  dir_02b8df35666f4569a051687d37d57615.html  dir_02b8df35666f4569a051687d37d57615.js  dir_07cc544e6394bf3dfdd028b8dfeac742.html  dir_07cc544e6394bf3dfdd028b8dfeac742.js  dir_1563a38af0d3a5e4a6330d6d45e9792a.html  dir_1563a38af0d3a5e4a6330d6d45e9792a.js  dir_20a36fc8a4949d7efb0c8c5bf02352ee.html  dir_20a36fc8a4949d7efb0c8c5bf02352ee.js  dir_2317d6a73d8c3931d394ecc22f7deca3.html  dir_2317d6a73d8c3931d394ecc22f7deca3.js  dir_273999c6f631ed0346fb45a73d472383.html  dir_273999c6f631ed0346fb45a73d472383.js  dir_2e5eb69021ab9d90aa4fe369935c56b7.html  dir_2e5eb69021ab9d90aa4fe369935c56b7.js  dir_34919fc894ec7fc77a0481e9d06b3ef0.html  dir_34919fc894ec7fc77a0481e9d06b3ef0.js  dir_3de76f419617a4f3e6f17c058a2a695a.html  dir_3de76f419617a4f3e6f17c058a2a695a.js  dir_49e56c817e5e54854c35e136979f97ca.html  dir_4beb59c78768ffa1a54c55803c4c35c2.html  dir_4beb59c78768ffa1a54c55803c4c35c2.js  dir_5aee890ec1d0e82771cb7939f5eadfcf.html  dir_5aee890ec1d0e82771cb7939f5eadfcf.js  dir_6b5d4e787edcc1dbcee984c8029f2fbc.html  dir_6b5d4e787edcc1dbcee984c8029f2fbc.js  dir_6bdda583fdf5fc7838518542ee0d579c.html  dir_6bdda583fdf5fc7838518542ee0d579c.js  (+132 more)
src/Lightweight/: Api.hpp  BlockingQueue.hpp  CMakeLists.txt  Description.hpp  Lightweight.cppm  Lightweight.hpp  SqlAdvisoryLock.hpp  SqlBackup.hpp  SqlColumnTypeDefinitions.hpp  SqlConnectInfo.cpp  SqlConnectInfo.hpp  SqlConnection.cpp  SqlConnection.hpp  SqlDataBinder.hpp  SqlDataDiff.cpp  SqlDataDiff.hpp  SqlError.cpp  SqlError.hpp  SqlErrorDetection.hpp  SqlLogger.cpp  SqlLogger.hpp  SqlMigration.cpp  SqlMigration.hpp  SqlMigrationLock.cpp  SqlMigrationLock.hpp  SqlOdbcWide.hpp  SqlQuery.cpp  SqlQuery.hpp  SqlQueryFormatter.cpp  SqlQueryFormatter.hpp  SqlRealName.hpp  SqlSchema.cpp  SqlSchema.hpp  SqlSchemaDiff.cpp  SqlSchemaDiff.hpp  SqlScopedLock.cpp  SqlScopedLock.hpp  SqlScopedTraceLogger.hpp  SqlServerType.hpp  SqlStatement.cpp  (+8 more)
src/Lightweight/Async/: Async.hpp  AsyncSqlTransaction.cpp  AsyncSqlTransaction.hpp  Backend.hpp  CancellationToken.hpp  DataMapperAsync.hpp  DataMapperAsync.inl  Executor.hpp  Fwd.hpp  ManualExecutor.cpp  ManualExecutor.hpp  Sender.hpp  StrandExecutor.cpp  StrandExecutor.hpp  SyncWait.hpp  Task.hpp  ThreadOffloadBackend.hpp  ThreadPoolExecutor.cpp  ThreadPoolExecutor.hpp  WorkQueue.hpp
src/Lightweight/CodeGen/: SplitFileWriter.cpp  SplitFileWriter.hpp
src/Lightweight/Config/: ProfileStore.cpp  ProfileStore.hpp
src/Lightweight/DataBinder/: BasicStringBinder.hpp  Core.hpp  MFCStringLike.hpp  Primitives.cpp  Primitives.hpp  SqlBinary.hpp  SqlDate.hpp  SqlDateTime.cpp  SqlDateTime.hpp  SqlDynamicBinary.hpp  SqlDynamicString.hpp  SqlFixedString.hpp  SqlGuid.cpp  SqlGuid.hpp  SqlNullValue.hpp  SqlNumeric.hpp  SqlRawColumn.hpp  SqlText.hpp  SqlTime.hpp  SqlVariant.cpp  SqlVariant.hpp  StdOptional.hpp  StdString.hpp  StdStringView.hpp  StringInterface.hpp  StringLiteral.hpp  UnicodeConverter.cpp  UnicodeConverter.hpp
src/Lightweight/DataMapper/: BelongsTo.hpp  CollectDifferences.hpp  DataMapper.cpp  DataMapper.hpp  Error.hpp  Field.hpp  HasMany.hpp  HasManyThrough.hpp  HasOneThrough.hpp  Pool.cpp  Pool.hpp  QueryBuilders.hpp  Record.hpp  SqlRealName.hpp
src/Lightweight/MigrationFold/: CppEmitter.cpp  CppEmitter.hpp  Folder.cpp  Folder.hpp  SqlEmitter.cpp  SqlEmitter.hpp
src/Lightweight/Odbc/: DataSourceEnumerator.cpp  DataSourceEnumerator.hpp
src/Lightweight/QueryFormatter/: OracleFormatter.hpp  PostgreSqlFormatter.hpp  SQLiteFormatter.hpp  SqlServerFormatter.hpp
src/Lightweight/Secrets/: ISecretBackend.hpp  SecretResolver.cpp  SecretResolver.hpp
src/Lightweight/SqlBackup/: Backup.cpp  Backup.hpp  BatchManager.cpp  BatchManager.hpp  ChunkPlanner.cpp  ChunkPlanner.hpp  Common.cpp  Common.hpp  ConnectionPool.cpp  ConnectionPool.hpp  MsgPackChunkFormats.cpp  MsgPackChunkFormats.hpp  Restore.cpp  Restore.hpp  Sha256.hpp  SqlBackup.cpp  SqlBackup.hpp  SqlBackupFormats.hpp  TableFilter.cpp  TableFilter.hpp  WorkerChunkArchive.cpp  WorkerChunkArchive.hpp
src/Lightweight/SqlQuery/: Core.cpp  Core.hpp  Delete.hpp  Insert.hpp  Migrate.cpp  Migrate.hpp  MigrationPlan.cpp  MigrationPlan.hpp  Select.cpp  Select.hpp  Update.hpp
src/Lightweight/Tools/: CxxModelPrinter.cpp  CxxModelPrinter.hpp
src/Lightweight/Zip/: ZipArchive.cpp  ZipArchive.hpp  ZipEntry.cpp  ZipEntry.hpp  ZipError.hpp
src/Lightweight/tui/: MarkdownInline.hpp  MarkdownTable.cpp  MarkdownTable.hpp  SgrBuilder.cpp  SgrBuilder.hpp  Style.hpp  Unicode.cpp  Unicode.hpp
src/benchmark/: .gitignore  CMakeLists.txt  CreateDatabase.py  benchmark.cpp  how_to.md  measure_compile_time.py  readme.md  tables.hpp
src/benchmark/entities/: Table0.hpp  Table1.hpp  Table10.hpp  Table11.hpp  Table12.hpp  Table13.hpp  (+94 more)
src/tests/: CMakeLists.txt  ConfigProfileStoreTests.cpp  CoreTests.cpp  CxxModelPrinterTests.cpp  DataBinderTests.cpp  DataMapperTests.cpp  DataSourceEnumeratorTests.cpp  DocExampleTests.cpp  FieldTests.cpp  Lup2DbtoolTests.cpp  LupTransitionGlueTests.cpp  MigrationLockTests.cpp  MigrationReflectionTests.cpp  MigrationTests.cpp  PluginDiscoveryTests.cpp  PluginIngestionTests.cpp  QueryBuilderTests.cpp  QueryFormatterTests.cpp  SecretResolverTests.cpp  SqlBinaryAndTextDbTests.cpp  SqlConnectInfoEdgeTests.cpp  SqlConnectionDbTests.cpp  SqlDataDiffTests.cpp  SqlDateTimeArithmeticTests.cpp  SqlDateTimeDbTests.cpp  SqlErrorDetectionTests.cpp  SqlGuidTests.cpp  SqlLoggerTests.cpp  SqlNumericTests.cpp  SqlRealNameTests.cpp  SqlSchemaDbTests.cpp  SqlSchemaDiffTests.cpp  SqlStatementBatchFetchTests.cpp  SqlStatementDbTests.cpp  SqlStatementPrefetchTests.cpp  SqlTransactionTests.cpp  SqlVariantAccessorTests.cpp  SqlVariantDbTests.cpp  ThreadSafeQueueTests.cpp  UnicodeConverterTests.cpp  (+5 more)
src/tools/: CMakeLists.txt  dbcopy.cpp  dbtool.cpp  ddl2cpp.cpp  test.sh  test_chinook.sh  utils.hpp
(+1450 files in other folders)
